--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ test = [
   'pytest-cov<6.1.0',
   'pytest-memprof<0.3.0',
   'pytest-pyvista==0.1.8',
+  'pytest-rerunfailures<15.0',
   'pytest-xdist<3.7.0',
   'pytest<8.4.0',
   'pytest_mock<3.15.0',
